...
    <string name="add_comment">Add comment&#8230;</string>
    <string name="just_posted">Just posted</string>
    <string name="sure_you_want_to_quit">Are you sure you want to quit application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="no_result_found">No result found!</string>
    <string name="you_are_not_subscribed_on_any_event">You are not subscribed on any event!</string>
    <string name="delete_comment_message">Do you really want to delete this comment?</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed_events">Subscribed events</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="undo">Undo</string>
    <string name="event_restored">Event is restored!</string>
    <string name="food">Food</string>
    <string name="region">Region</string>
    <string name="sights">Sights</string>
    <string name="faculty">Faculty</string>
    <string name="conference">Conference</string>
    <string name="location_permission">Location permission</string>
...
